Fix waveform height letting the visible waveform get far away from the video

--- a/thrimbletrimmer/beta/styles/thrimbletrimmer.css
+++ b/thrimbletrimmer/beta/styles/thrimbletrimmer.css
@@ -85,6 +85,12 @@ a,
 
 #waveform {
 	width: 100%;
+
+	/* With an unbound height, the waveform can appear a bit away from the video.
+	 * The intended effect still works if we scrunch the height a bit, so here's
+	 * a height bound for the waveform image.
+	 */
+	max-height: 100px;
 }
 
 #editor-help {
